# coding-search-python

./: LICENSE  README.md  install.sh  pyproject.toml
.github/workflows/: publish.yml
src/coding_search/: __init__.py  _cli.py  _client.py
tests/: test_cli.py  test_client.py
